implement winston logger

--- a/api/package.json
+++ b/api/package.json
@@ -29,7 +29,8 @@
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -41,6 +42,7 @@
     "@types/node": "^16.3.1",
     "@types/pg": "^8.6.1",
     "@types/uuid": "^8.3.1",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "eslint": "^7.26.0",
