--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -1,14 +1,20 @@
 version: '3.1'
-services: 
+services:
+  web:
+    build: .
+    ports:
+      - '5000:5000'
   postgres:
-      image: postgres
-      restart: always
-      environment:
-        POSTGRES_PASSWORD: password
-      ports: 
-        - "5432:5432"
-      volumes:
-        - data:/data/db
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: 'password'
+      POSTGRES_DB_HOST: 'localhost'
+      POSTGRES_DB_PORT: '5432'
+      POSTGRES_USER: postgres
+    ports:
+      - '5432:5432'
+    volumes:
+      - data:/data/db
 volumes:
   data:
-
