change migration and queries

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /home/node/app
 COPY *.json yarn.lock ./
 COPY ./ /home/node/app/
 RUN yarn
+RUN npx prisma migrate dev --name init
 RUN npx prisma generate
 CMD yarn start
 EXPOSE 5000
