--- a/api/package.json
+++ b/api/package.json
@@ -3,27 +3,28 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
     "start": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/app.ts\"",
     "format": "yarn run format:ts",
-    "format:check": "prettier -c 'src/**/*.{ts,tsx}'",
+    "format:check": "prettier -c \"src/**/*.{ts,tsx}\"",
     "lint": "yarn run lint:ts",
     "lint:ts": "tsc && yarn lint:eslint",
-    "lint:eslint": "eslint 'src/**/*.{ts,tsx}'",
-    "format:ts": "prettier --write 'src/**/*.{ts,tsx}' && yarn lint:eslint --fix"
+    "lint:eslint": "eslint \"src/**/*.{ts,tsx}\"",
+    "format:ts": "prettier --write \"src/**/*.{ts,tsx}\" && yarn lint:eslint --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.6.0",
+    "apollo-server": "^3.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "graphql": "^16.1.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "joi": "^17.5.0",
