implement graphql and apollo-server

--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -66,6 +66,7 @@
             "error",
             2
         ],
-        "object-curly-spacing": 0
+        "object-curly-spacing": 0,
+        "implicit-arrow-linebreak": 0
     }
 }
