--- a/api/package.json
+++ b/api/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/app.ts\"",
+    "start:express": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/app.ts\"",
     "format": "yarn run format:ts",
     "format:check": "prettier -c \"src/**/*.{ts,tsx}\"",
     "lint": "yarn run lint:ts",
     "lint:ts": "tsc && yarn lint:eslint",
     "lint:eslint": "eslint \"src/**/*.{ts,tsx}\"",
-    "format:ts": "prettier --write \"src/**/*.{ts,tsx}\" && yarn lint:eslint --fix"
+    "format:ts": "prettier --write \"src/**/*.{ts,tsx}\" && yarn lint:eslint --fix",
+    "start:graphql": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/graphql/server.ts\"",
+    "start": "start yarn start:express && start yarn start:graphql"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/merge": "^8.2.1",
+    "@graphql-tools/schema": "^8.3.1",
     "@prisma/client": "^3.6.0",
     "apollo-server": "^3.5.0",
     "cookie-parser": "^1.4.6",
@@ -23,6 +27,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "graphql": "^16.1.0",
     "helmet": "^4.6.0",
