--- a/api/package.json
+++ b/api/package.json
@@ -36,7 +36,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "uuid": "^8.3.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "prisma": "^3.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -56,7 +57,6 @@
     "eslint-plugin-import": "^2.23.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
-    "prisma": "^3.4.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
