--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -9,7 +9,7 @@
             "esnext.asynciterable",
         ],
         "skipLibCheck": true,
-        "sourceMap": true,
+        "sourceMap": false,
         "outDir": "./dist",
         "moduleResolution": "node",
         "removeComments": true,
