--- a/api/package.json
+++ b/api/package.json
@@ -22,22 +22,24 @@
     "@graphql-tools/schema": "^8.3.1",
     "@prisma/client": "^3.6.0",
     "apollo-server": "^3.5.0",
+    "apollo-server-core": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
-    "graphql": "^16.1.0",
+    "graphql": "^16.2.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
+    "prisma": "^3.6.0",
     "uuid": "^8.3.2",
-    "winston": "^3.3.3",
-    "prisma": "^3.6.0"
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
