--- a/front/package.json
+++ b/front/package.json
@@ -1,87 +1,52 @@
 {
   "name": "front",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "build": "webpack --config ./build/webpack/local.webpack.config.babel.js --env=localdev",
-    "start": "webpack serve --open --config ./build/webpack/local.webpack.config.babel.js --env=localdev",
-    "format": "yarn run format:ts",
-    "format:check": "prettier -c 'src/**/*.{ts,tsx}'",
-    "lint": "yarn run lint:ts",
-    "lint:ts": "tsc && yarn lint:eslint",
-    "lint:eslint": "eslint 'src/**/*.{ts,tsx}'",
-    "format:ts": "prettier --write 'src/**/*.{ts,tsx}' && yarn lint:eslint --fix"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@types/js-cookie": "^3.0.1",
-    "@types/react": "^17.0.34",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "autoprefixer": "^10.4.0",
-    "babel-loader": "^8.0.0",
-    "core-js": "^3.0.0",
-    "css-loader": "^6.5.1",
-    "eslint": "^8.2.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.1-alpha-ee069065d-20211105",
-    "eslint-webpack-plugin": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "postcss": "^8.3.11",
-    "postcss-loader": "^6.2.0",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.5.1",
-    "sass": "1.32",
-    "sass-loader": "^12.3.0",
-    "source-map-loader": "^3.0.0",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.2.4",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "typescript": "^4.0.0",
-    "typescript-eslint": "^0.0.1-alpha.0",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0"
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "current"
-          },
-          "corejs": "3",
-          "useBuiltIns": "usage"
-        }
-      ]
-    ]
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@popperjs/core": "^2.10.2",
-    "@types/react-bootstrap": "^0.32.28",
+    "@apollo/client": "^3.5.6",
+    "@hookform/resolvers": "^2.8.5",
+    "classnames": "^2.3.1",
+    "joi": "^17.5.0",
+    "next": "12.0.7",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.22.5",
+    "react-transition-group": "^4.4.2",
+    "react-use": "^17.3.1"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "2.3.0",
+    "@graphql-codegen/fragment-matcher": "3.2.0",
+    "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/typescript": "2.4.1",
+    "@graphql-codegen/typescript-document-nodes": "2.2.1",
+    "@graphql-codegen/typescript-graphql-files-modules": "2.1.0",
+    "@graphql-codegen/typescript-operations": "^2.2.1",
+    "@graphql-codegen/typescript-react-apollo": "3.2.2",
+    "@graphql-codegen/typescript-resolvers": "^2.4.2",
+    "@graphql-codegen/urql-introspection": "2.1.0",
+    "@next/eslint-plugin-next": "^12.0.7",
+    "@types/node": "17.0.2",
+    "@types/react": "17.0.37",
     "@types/react-dom": "^17.0.11",
-    "@types/react-router": "^5.1.17",
-    "@types/react-router-dom": "^5.3.2",
-    "axios": "^0.24.0",
-    "bootstrap": "^5.0.0",
-    "font-awesome": "^4.7.0",
-    "history": "^5.1.0",
-    "js-cookie": "^3.0.1",
-    "react": "^17.0.0",
-    "react-bootstrap": "^2.0.2",
-    "react-dom": "^17.0.0",
-    "react-router": "^6.0.1",
-    "react-router-dom": "^6.0.2"
+    "@types/react-transition-group": "^4.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "apollo": "^2.33.9",
+    "autoprefixer": "^10.4.1",
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.28.0",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^3.0.8",
+    "typescript": "4.5.4"
   }
 }
