--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -1,33 +1,30 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
+    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
     "allowJs": true,
-    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
     "strict": true,
-    "baseUrl": "./src",
-    "rootDir": "./src",
-    "alwaysStrict": true,
     "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react",
-    "paths": {
-      "@routes/*": [
-        "components/routes/*"
-      ]
-
-    }
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": [
-    "src"
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
